# velma_system

./: .gitmodules  CMakeLists.txt  README.md  package.xml  setup.py  system.dot
rtt_velma_core_cs_task_cs_msgs/: CMakeLists.txt  package.xml
rtt_velma_core_cs_task_cs_subsystem_ports/: CMakeLists.txt  package.xml
rtt_velma_core_cs_ve_body_msgs/: CMakeLists.txt  package.xml
rtt_velma_ec_gen_msgs/: CMakeLists.txt  package.xml
rtt_velma_low_level_interface_msgs/: CMakeLists.txt  package.xml
velma_common/: CMakeLists.txt  README.md  package.xml  setup.py
velma_common/config/: joint_limits_cimp.yaml  wcc.yaml  wcc_l.yaml  wcc_r.yaml
velma_common/launch/: ar_track_kinect_50.launch  ar_track_kinect_80.launch  kinect_hw.launch  octomap_offline_server.launch  octomap_server.launch  octomap_server_stereo.launch  show_collisions.launch  show_joints.launch  show_kinect_frustrum.launch  show_kinect_frustum.launch  show_reachability_range.launch  velma_fake.launch  velma_system.launch  velma_system_rt.launch  velma_system_up.launch
velma_common/scripts/: collisions_editor  int_markers_cimp  int_markers_cimp.py  int_markers_jimp  int_markers_jimp.py  odom_localization.py  reset_shm_comm  reset_shm_comm.py  velma_look_at_action_server.py  wcc_editor
velma_common/scripts/velma_common/: barrett_hand_interface.py  velma_interface.py  velmautils.py
velma_common/src/: int_markers_cimp.py
velma_common/src/velma_common/: __init__.py  velma_interface.py
velma_common_components/: CMakeLists.txt
velma_common_components/src/: ec_can_queue.cpp  ec_can_tx_queue_component.cpp
velma_core_cs/: CMakeLists.txt  README.md  package.xml
velma_core_cs/config/: velma_core_cs_transition.xml  velma_core_cs_transition_data_writer.xml
velma_core_cs/launch/: velma_core_cs.launch
velma_core_cs/scripts/: col_det_vis.py
velma_core_cs/spec/: subsystem.xml
velma_core_cs/src/: predicates.cpp
velma_core_cs/src/components/: InternalSpaceTrapezoidTrajectoryGeneratorVelmaBody.cpp  InternalSpaceTrapezoidTrajectoryGeneratorVelmaHead.cpp  cart_imp.cpp  cartesian_impedance_interpolator.cpp  collision_detector.cpp  data_buffer_manager.cpp  data_buffer_manager.h  double_joint_collision_detector.cpp  double_joint_collision_detector.h  double_joint_constraint.h  fcl.cpp  idle.cpp  (+14 more)
velma_core_cs_task_cs_msgs/: CMakeLists.txt  package.xml
velma_core_cs_task_cs_msgs/msg/: Command.msg  CommandCartImp.msg  CommandCartImpTrjImp.msg  CommandCartImpTrjPose.msg  CommandHead.msg  CommandJntImp.msg  Status.msg  StatusCartImp.msg  StatusJntImp.msg  VelmaHeadTrajectoryPoint.msg  VelmaJointTrajectoryPoint.msg
velma_core_cs_task_cs_msgs/rtt_velma_core_cs_task_cs_msgs/: CMakeLists.txt  package.xml
velma_core_cs_task_cs_msgs/rtt_velma_core_cs_task_cs_subsystem_buffers/: CMakeLists.txt  package.xml
velma_core_cs_task_cs_msgs/velma_core_cs_task_cs_msgs/: CMakeLists.txt  package.xml
velma_core_cs_ve_body_msgs/: CMakeLists.txt  package.xml
velma_core_cs_ve_body_msgs/msg/: Command.msg  Status.msg  VelmaLowLevelCommand.msg  VelmaLowLevelStatus.msg
velma_core_cs_ve_body_msgs/rtt_velma_core_cs_ve_body_msgs/: CMakeLists.txt  package.xml
velma_core_cs_ve_body_msgs/rtt_velma_core_cs_ve_body_subsystem_buffers/: CMakeLists.txt  package.xml
velma_core_cs_ve_body_msgs/velma_core_cs_ve_body_msgs/: CMakeLists.txt  package.xml
velma_core_ve_re_lwr_msgs/: CMakeLists.txt
velma_core_ve_re_lwr_msgs/msg/: Status.msg
velma_core_ve_re_lwr_msgs/rtt_velma_core_ve_re_lwr_msgs/: CMakeLists.txt
velma_core_ve_re_lwr_msgs/rtt_velma_core_ve_re_lwr_subsystem_buffers/: CMakeLists.txt  package.xml
velma_core_ve_re_lwr_msgs/rtt_velma_core_ve_re_lwr_subsystem_ports/: CMakeLists.txt  package.xml
velma_core_ve_re_lwr_msgs/velma_core_ve_re_lwr_msgs/: package.xml
velma_ec_gen_msgs/rtt_velma_ec_gen_subsystem_buffers/: CMakeLists.txt  package.xml
velma_kinematics/: CMakeLists.txt  README.md  package.xml  setup.py
velma_kinematics/launch/: test_ik.launch
velma_kinematics/scripts/: test_lwr_workspace.py  test_velma_ik_geom.py  test_velma_workspace.py
velma_kinematics/src/: test_ik.cpp  velma_kinematics.cpp  velma_state_validator.cpp
velma_look_at_action_msgs/: CMakeLists.txt  package.xml
velma_look_at_action_msgs/action/: LookAt.action
velma_low_level_interface_msgs/: CMakeLists.txt  package.xml
velma_low_level_interface_msgs/msg/: VelmaLowLevelCommand.msg  VelmaLowLevelCommandArm.msg  VelmaLowLevelCommandHand.msg  VelmaLowLevelCommandTactile.msg  VelmaLowLevelStatus.msg  VelmaLowLevelStatusArm.msg  VelmaLowLevelStatusFT.msg  VelmaLowLevelStatusHand.msg  VelmaLowLevelStatusMotor.msg  VelmaLowLevelStatusSC.msg  VelmaRealEffectorCommand.msg  VelmaRealEffectorStatus.msg
velma_lwr_sim/: CMakeLists.txt  README.md  package.xml
velma_lwr_sim/config/: velma_core_re_lwr_l.xml  velma_core_re_lwr_r.xml
velma_lwr_sim/launch/: velma_sim_re_lwr_l.launch  velma_sim_re_lwr_r.launch
velma_lwr_sim/spec/: subsystem.xml
velma_lwr_sim/src/: lwr_sim.cpp
velma_ros_plugin/: CMakeLists.txt  README.md  package.xml  velma_ros_plugin.xml
velma_ros_plugin/launch/: velma_planner.launch  velma_workspace_tool.launch
velma_ros_plugin/src/: velma_ros_plugin.cpp
velma_sim_gazebo/: CMakeLists.txt  README.md  package.xml
velma_sim_gazebo/config/: initial_state.txt  velma_core_re.xml
velma_sim_gazebo/launch/: empty_world.launch  velma_gazebo_re.launch
velma_sim_gazebo/scripts/: unpause_on_init  unpause_on_init.py
velma_sim_gazebo/spec/: subsystem.xml
velma_sim_gazebo/src/: barrett_hand_gazebo.cpp  barrett_hand_gazebo.h  barrett_hand_gazebo_init.cpp  barrett_hand_gazebo_orocos.cpp  barrett_tactile_gazebo.cpp  barrett_tactile_gazebo.h  ft_sensor_gazebo.cpp  ft_sensor_gazebo.h  ft_sensor_gazebo_init.cpp  ft_sensor_gazebo_orocos.cpp  lwr_gazebo.cpp  lwr_gazebo.h  lwr_gazebo_init.cpp  lwr_gazebo_orocos.cpp  manipulator_mass_matrix.cpp  manipulator_mass_matrix.h  optoforce_gazebo.cpp  optoforce_gazebo.h  torso_gazebo.cpp  torso_gazebo.h  torso_gazebo_init.cpp  torso_gazebo_orocos.cpp  velma_sim_conversion.cpp  velma_sim_conversion.h
(+334 files in other folders)
