<package>
  <name>velma_core_ve_body</name>
  <version>0.1.1</version>
  <license>BSD</license>
  <maintainer email="dawid.seredynski@gmail.com">Dawid Seredynski</maintainer>
  <description>
    velma_core_ve_body
  </description>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build deps are queried automatically with orocos_use_package() -->
  <build_depend>rtt</build_depend>
  <build_depend>ocl</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>rtt_rosclock</build_depend>
  <build_depend>velma_core_cs_ve_body_msgs</build_depend>
  <build_depend>common_interfaces</build_depend>
  <build_depend>common_behavior</build_depend>
  <build_depend>eigen_conversions</build_depend>
<!--  <build_depend>rtt_velma_core_cs_ve_body_subsystem_ports</build_depend>-->
  <build_depend>rtt_subsystem</build_depend>
  <build_depend>controller_common</build_depend>
  <build_depend>lwr_msgs</build_depend>
  <build_depend>velma_ec_gen_msgs</build_depend>
<!--  <build_depend>rtt_velma_ec_gen_subsystem_ports</build_depend>-->
  <build_depend>velma_common_components</build_depend>
  <run_depend>velma_common_components</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <build_depend>velma_core_ve_re_lwr_msgs</build_depend>
  <run_depend>velma_core_ve_re_lwr_msgs</run_depend>

  <run_depend>rtt</run_depend>
  <run_depend>ocl</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>velma_core_cs_ve_body_msgs</run_depend>
<!--  <run_depend>rtt_velma_core_cs_ve_body_subsystem_ports</run_depend>-->
  <run_depend>subsystem_deployer</run_depend>
  <run_depend>velma_ec_gen_msgs</run_depend>
<!--  <run_depend>rtt_velma_ec_gen_subsystem_ports</run_depend>-->
  <run_depend>geometry_msgs</run_depend>

  <!-- ROS Msg Typekits and Srv Proxies -->
  <build_depend>rtt_std_msgs</build_depend>
  <run_depend>rtt_std_msgs</run_depend>

  <export>
    <rtt_ros>
      <!-- Plugin deps are loaded automatically by the rtt_ros import service -->
      <plugin_depend>rtt_std_msgs</plugin_depend>
      <plugin_depend>rtt_lwr_msgs</plugin_depend>
      <plugin_depend>velma_data_conversions</plugin_depend>
      <plugin_depend>rtt_barrett_hand_subsystem_ports</plugin_depend>
      <plugin_depend>rtt_barrett_hand_msgs</plugin_depend>
      <plugin_depend>rtt_velma_core_cs_ve_body_subsystem_ports</plugin_depend>
      <plugin_depend>rtt_velma_ec_gen_subsystem_ports</plugin_depend>
      <plugin_depend>rtt_velma_core_ve_re_lwr_subsystem_ports</plugin_depend>
      <plugin_depend>rtt_velma_core_ve_re_lwr_msgs</plugin_depend>
    </rtt_ros>
  </export>
</package>
