<package>
  <name>velma_common_components</name>
  <version>0.1.1</version>
  <license>BSD</license>
  <maintainer email="dawid.seredynski@gmail.com">Dawid Seredynski</maintainer>
  <description>
    velma_common_components
  </description>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build deps are queried automatically with orocos_use_package() -->
  <build_depend>rtt</build_depend>
  <build_depend>ocl</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>controller_common</build_depend>

  <run_depend>rtt</run_depend>
  <run_depend>ocl</run_depend>
  <run_depend>rtt_ros</run_depend>

  <export>
    <rtt_ros>
      <!-- Plugin deps are loaded automatically by the rtt_ros import service -->
    </rtt_ros>
  </export>
</package>
