cmake_minimum_required(VERSION 2.8.3)
project(rtt_velma_core_cs_ve_body_msgs)

find_package(catkin REQUIRED COMPONENTS rtt_roscomm velma_core_cs_ve_body_msgs rtt_barrett_hand_msgs common_interfaces)

ros_generate_rtt_typekit(velma_core_cs_ve_body_msgs)

orocos_generate_package(
  DEPENDS velma_core_cs_ve_body_msgs
  DEPENDS_TARGETS rtt_roscomm rtt_std_msgs rtt_geometry_msgs rtt_barrett_hand_msgs
)
