cmake_minimum_required(VERSION 2.8.3)
project(rtt_velma_low_level_interface_msgs)

find_package(catkin REQUIRED COMPONENTS rtt_roscomm velma_low_level_interface_msgs)

ros_generate_rtt_typekit(velma_low_level_interface_msgs)

orocos_generate_package(
  DEPENDS velma_low_level_interface_msgs
  DEPENDS_TARGETS rtt_roscomm rtt_std_msgs rtt_geometry_msgs rtt_barrett_hand_controller_msgs

)
