<package>
  <name>velma_core_cs</name>
  <version>0.1.1</version>
  <license>BSD</license>
  <maintainer email="dawid.seredynski@gmail.com">Dawid Seredynski</maintainer>
  <description>
    velma_core_cs
  </description>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build deps are queried automatically with orocos_use_package() -->
  <build_depend>rtt</build_depend>
  <build_depend>ocl</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>rtt_rosclock</build_depend>
  <build_depend>velma_core_cs_task_cs_msgs</build_depend>
  <build_depend>velma_core_cs_ve_body_msgs</build_depend>
  <build_depend>common_interfaces</build_depend>
  <build_depend>subsystem_common</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>controller_common</build_depend>
  <build_depend>rtt_subsystem</build_depend>
  <build_depend>planer_utils</build_depend>
  <build_depend>common_core_cs_components</build_depend>
  <build_depend>grasped_object_in_robot_control</build_depend>
  <build_depend>fabric_logger</build_depend>
  
  <run_depend>rtt</run_depend>
  <run_depend>ocl</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>velma_core_cs_task_cs_msgs</run_depend>
  <run_depend>velma_core_cs_ve_body_msgs</run_depend>
  <run_depend>subsystem_deployer</run_depend>
  <run_depend>planer_utils</run_depend>
  <run_depend>common_core_cs_components</run_depend>
  <run_depend>grasped_object_in_robot_control</run_depend>
  <run_depend>fabric_logger</run_depend>

  <!-- ROS Msg Typekits and Srv Proxies -->
  <build_depend>rtt_std_msgs</build_depend>
  <run_depend>rtt_std_msgs</run_depend>

  <export>
    <rtt_ros>
      <!-- Plugin deps are loaded automatically by the rtt_ros import service -->
      <plugin_depend>rtt_std_msgs</plugin_depend>
      <plugin_depend>velma_data_conversions</plugin_depend>
      <plugin_depend>rtt_velma_core_cs_ve_body_subsystem_buffers</plugin_depend>
      <plugin_depend>rtt_velma_core_cs_task_cs_subsystem_buffers</plugin_depend>
      <plugin_depend>rtt_barrett_hand_subsystem_buffers</plugin_depend>
      <plugin_depend>rtt_barrett_hand_msgs</plugin_depend>
    </rtt_ros>
  </export>
</package>
