<package>
  <name>velma_sim_gazebo</name>
  <version>0.0.1</version>
  <description>	Simulation plugin and launch scripts for Velma in gazebo.</description>
  <maintainer email="dawid.seredynski@gmail.com">Dawid Seredynski</maintainer>

  <license>BSD</license>

  <author>Dawid Seredynski</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>lwr_msgs</build_depend>
  <build_depend>rtt_gazebo_deployer</build_depend>
  <build_depend>rtt_actionlib</build_depend>
  <build_depend>barrett_hand_tactile</build_depend>
  <build_depend>barrett_hand_controller</build_depend>
  <build_depend>barrett_hand_msgs</build_depend>
  <build_depend>subsystem_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>subsystem_common</build_depend>
  <build_depend>rtt_subsystem</build_depend>
  <build_depend>velma_ec_gen_msgs</build_depend>
  <build_depend>shm_comm</build_depend>
  <build_depend>common_interfaces</build_depend>
  <build_depend>velma_common_components</build_depend>
  <build_depend>barrett_hand_hw_sim</build_depend>

  <run_depend>barrett_hand_msgs</run_depend>
  <run_depend>barrett_hand_status_msgs</run_depend>

  <build_depend>velma_core_ve_re_lwr_msgs</build_depend>
  <run_depend>velma_core_ve_re_lwr_msgs</run_depend>
  
  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>lwr_msgs</run_depend>
  <run_depend>rtt_gazebo_deployer</run_depend>
  <run_depend>barrett_hand_tactile</run_depend>
  <run_depend>barrett_hand_controller</run_depend>
  <run_depend>subsystem_msgs</run_depend>
  <run_depend>subsystem_common</run_depend>
  <run_depend>velma_ec_gen_msgs</run_depend>
  <run_depend>shm_comm</run_depend>
  <run_depend>common_interfaces</run_depend>
  <run_depend>velma_common_components</run_depend>
  <run_depend>barrett_hand_hw_sim</run_depend>

  <export>
    <rtt_ros>
      <!-- Plugin deps are loaded automatically by the rtt_ros import service -->
      <plugin_depend>rtt_std_msgs</plugin_depend>
      <plugin_depend>rtt_lwr_msgs</plugin_depend>
      <plugin_depend>velma_data_conversions</plugin_depend>
      <plugin_depend>rtt_velma_ec_gen_subsystem_buffers</plugin_depend>
      <plugin_depend>rtt_velma_core_ve_re_lwr_subsystem_buffers</plugin_depend>
      <plugin_depend>rtt_velma_core_ve_re_lwr_msgs</plugin_depend>
      <plugin_depend>rtt_barrett_hand_subsystem_buffers</plugin_depend>
      <plugin_depend>rtt_barrett_hand_msgs</plugin_depend>
      <plugin_depend>rtt_barrett_hand_status_msgs</plugin_depend>
    </rtt_ros>
  </export>
</package>
