cmake_minimum_required(VERSION 2.8.3)
project(rtt_velma_core_cs_task_cs_msgs)

find_package(catkin REQUIRED COMPONENTS rtt_roscomm common_interfaces velma_core_cs_task_cs_msgs rtt_velma_core_cs_ve_body_msgs rtt_barrett_hand_msgs rtt_barrett_hand_status_msgs)

ros_generate_rtt_typekit(velma_core_cs_task_cs_msgs)

orocos_generate_package(
  DEPENDS velma_core_cs_task_cs_msgs
  DEPENDS_TARGETS rtt_roscomm rtt_std_msgs rtt_geometry_msgs rtt_cartesian_trajectory_msgs rtt_control_msgs rtt_barrett_hand_status_msgs
)
